test_result.txt
warning: associated function is never used: `new`
  --> src/lib.rs:20:8
   |
20 |     fn new() -> Hachator{
   |        ^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: 1 warning emitted

   Compiling mock_session v0.1.0 (/Users/tof/dev/mock_session)
warning: unused import: `std::io::prelude::*`
  --> src/lib.rs:56:9
   |
56 |     use std::io::prelude::*;
   |         ^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0308]: mismatched types
  --> src/lib.rs:63:44
   |
63 |         hachator.actionne("UnFichier.txt", &fs::metadata);
   |                                            ^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected type `FnOnce<(&str,)>`
              found type `FnOnce<(&str,)>`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
error: could not compile `mock_session`

To learn more, run the command again with --verbose.
